--- a/index.html
+++ b/index.html
@@ -37,21 +37,23 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-3 card">
-      <br />
-      <img src="ProfilePicture.png" alt="Profile_Picture" width="50%" height="28%" />
-      <br />
-
-      <h3 style="font-size:200%; color:Ivory ">Vamshi Saini.</h3>
-      <br />
-      <p style="font-size:150%; font-family: monospace; color:Ivory ">
-        <i><b><u>About my self</u></b></i>
-      </p>
-      <p class="about-text">
-        With a passion for Technology, Computers, Innovation, I have both the skill set and professional background necessary to dive deep into the IT Industry.
-        As an Enthusiastic, self-motivated team player with excellent communication,
-        I wish to have an exciting future in the industry. Browse my site to see all that I have to offer.
-      </p>
+    <div class="col-sm-3">
+      <div class="heroine-bg">
+        <div class="heroine-text">
+          <img src="ProfilePicture.png" alt="Profile_Picture" width="50%" height="28%" />
+          <br />
+          <h3 style="font-size:200%; color:Ivory ">Vamshi Saini.</h3>
+          <br />
+          <p style="font-size:150%; font-family: monospace; color:Ivory ">
+            <i><b><u>About my self</u></b></i>
+          </p><br />
+          <p class="about-text">
+            With a passion for Technology, Computers, Innovation, I have both the skill set and professional background necessary to dive deep into the IT Industry.
+            As an Enthusiastic, self-motivated team player with excellent communication,
+            I wish to have an exciting future in the industry. Browse my site to see all that I have to offer.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
   <!--This is the main details section that follows 2-8-2 grid where content is in 8 grid-->
@@ -80,7 +82,7 @@
       <p><b>2017-2021</b></p>
       <p>GITAM University, Electronics and Communication Engineering.</p>
       <p>
-        Passed out first class with distinction with an aggregate CGPA of 8.2.
+        first class with distinction with an aggregate CGPA of 8.2.
       </p>
       <br />
       <p><b>2015-2017</b></p>
