--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta content=“width=device-width”>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="index.css" <meta charset="utf-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -24,35 +25,31 @@
   </div>
   <!--Top Name and picture grid area-->
   <div class="row">
-    <div class="col-sm-9">
-      <div class="hero-image">
-        <div class="hero-text">
-          <p style="font-size:200%; font-family: courier">
-            HELLO, I'M
-          </p>
-          <p style="font-size:400%; font-family: fantasy;:">
-            VAMSHI SAINI.
-          </p>
-          <h3 style="font-family: monospace">Analyst A4 @ Capgemini.</h3>
-        </div>
+    <div class="col-sm-9 hero-image">
+      <div class="hero-text">
+        <p style="font-size:200%; font-family: courier">
+          HELLO, I'M
+        </p>
+        <p style="font-size:400%; font-family: fantasy;:">
+          VAMSHI SAINI.
+        </p>
+        <h3 style="font-family: monospace">Analyst A4 @ Capgemini.</h3>
       </div>
     </div>
-    <div class="col-sm-3">
-      <div class="heroine-bg">
-        <div class="heroine-text">
-          <img src="ProfilePicture.png" alt="Profile_Picture" width="50%" height="28%" />
-          <br />
-          <h3 style="font-size:200%; color:Ivory ">Vamshi Saini.</h3>
-          <br />
-          <p style="font-size:150%; font-family: monospace; color:Ivory ">
-            <i><b><u>About my self</u></b></i>
-          </p><br />
-          <p class="about-text">
-            With a passion for Technology, Computers, Innovation, I have both the skill set and professional background necessary to dive deep into the IT Industry.
-            As an Enthusiastic, self-motivated team player with excellent communication,
-            I wish to have an exciting future in the industry. Browse my site to see all that I have to offer.
-          </p>
-        </div>
+    <div class="col-sm-3 heroine-bg">
+      <div class="heroine-text">
+        <img src="ProfilePicture.png" alt="Profile_Picture" width="50%" height="28%" />
+        <br />
+        <h3 style="font-size:200%; color:Ivory ">Vamshi Saini.</h3>
+        <br />
+        <p style="font-size:150%; font-family: monospace; color:Ivory ">
+          <i><b><u>About my self</u></b></i>
+        </p><br />
+        <p class="about-text">
+          With a passion for Technology, Computers, Innovation, I have both the skill set and professional background necessary to dive deep into the IT Industry.
+          As an Enthusiastic, self-motivated team player with excellent communication,
+          I wish to have an exciting future in the industry. Browse my site to see all that I have to offer.
+        </p>
       </div>
     </div>
   </div>
