--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <a class="nav-link" href="https://twitter.com/SainiVamshi1" target="_blank"><i class="fa fa-twitter"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://www.linkedin.com/in/vamshi-saini-031909204/" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a class="nav-link" href="https://www.instagram.com/vamshisaini_01/" target="_blank"><i class="fa fa-instagram"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://www.instagram.com/vamshisaini_01/" target="_blank"><i class="fa fa-linkedin"></i></a>
+        <a class="nav-link" href= "https://www.linkedin.com/in/vamshi-saini-031909204/" target="_blank"><i class="fa fa-linkedin"></i></a>
       </li>
     </ul>
   </div>
@@ -233,7 +233,7 @@
           <a class="nav-link" href="https://www.instagram.com/vamshisaini_01/" target="_blank"><i class="fa fa-instagram"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://www.instagram.com/vamshisaini_01/" target="_blank"><i class="fa fa-linkedin"></i></a>
+          <a class="nav-link" href= "https://www.linkedin.com/in/vamshi-saini-031909204/" target="_blank"><i class="fa fa-linkedin"></i></a>
         </li>
       </ul>
     </div>
