--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <p><b>2021-Present</b></p>
       <p>Capgemini, Analyst A4/Software Engineer</p>
       <p>
-        Trained in Salesforce Administration and Development. Working as QA Analyst in Martin Brower project. Gained a decent knowledge on Software Development and Testing by practicing Agile methedologies using tools like Jira.
+        Trained in Salesforce Administration and Development. Working as QA Analyst. Gained a decent knowledge on Software Development and Testing by practicing Agile methedologies using tools like Jira.
       </p>
     </div>
     <div class="col-sm-2">
