--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="nav-link" href="https://www.linkedin.com/in/vamshi-saini-031909204/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://www.instagram.com/vamshisaini_01/" target="_blank"><i class=""></i>fa-brands fa-instagram</a>
+        <a class="nav-link" href="https://www.instagram.com/vamshisaini_01/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://github.com/VAMSAINI" target="_blank"><i class="fa-brands fa-github"></i></a>
