--- a/index.html
+++ b/index.html
@@ -243,13 +243,7 @@
     </div>
     <div class="col-sm-3 matter">
       <h3 style="font-family:cursive; color:White">
-        <i>I'd</i>
-      </h3>
-      <h3 style="font-family:cursive; color:White">
-        <i>love to hear</i>
-      </h3>
-      <h3 style="font-family:cursive; color:White">
-        <i>from you</i>
+        <i>I'd love to hear from you</i>
       </h3>
     </div>
     <div class="col-sm-3 matter2">
